# why-production-is-down

./: .env.example  .gitignore  AUTOPOSTMORTEM_PLAN.md  README.md  SETUP.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: Dockerfile  Dockerfile.lambda  lambda_handler.py
deploy/terraform/: main.tf  outputs.tf  variables.tf
src/: config.py
src/adapters/: base.py  cloudwatch.py  datadog.py  github.py  launchdarkly.py  pagerduty.py  rds.py  sentry.py
src/agent/: orchestrator.py  prompts.py  tools.py
src/notifiers/: email.py  s3.py  slack.py
src/server/: webhook.py
src/store/: db.py
src/utils/: dedup.py  rate_limit.py  sqs.py  timeline.py  truncate.py
tests/: test_adapters.py  test_cloudwatch_adapter.py  test_datadog_adapter.py  test_dedup.py  test_github_adapter.py  test_github_rollback.py  test_launchdarkly_adapter.py  test_orchestrator.py  test_sentry_adapter.py  test_slack_rollback.py  test_store.py  test_timeline.py
tests/fixtures/: cloudwatch_logs.json  datadog_metrics.json  github_deploys.json  launchdarkly_flags.json  sentry_errors.json
